tests/e2e/explicit_cast_invalid2.story
t = {} to List[time]
c = t to List[float]
